--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -27,11 +27,11 @@
 
 /* Honme Section */
 @utility hero-section {
-  @apply min-h-screen max-w-screen flex lg:justify-center lg:items-center pt-[11.4rem] lg:pt-0 px-6 lg:px-5 overflow-x-hidden;
+  @apply min-h-screen max-w-screen flex flex-col lg:justify-center lg:items-center pt-[9.4rem] lg:pt-0 px-6 lg:px-0 overflow-hidden;
 }
 @utility hero-section-container {
-  @apply max-w-[104rem] w-full z-[2] block relative min-h-[89vh] lg:min-h-fit;
+  @apply max-w-[104rem] w-full z-[2] flex flex-col lg:flex-row  relative lg:min-h-[80vh];
 }
 @utility border-animated-div {
-  @apply aspect-square border-[1px] lg:border-[0.5px] border-black dark:border-white w-[60vh] opacity-20 lg:w-[70vw] absolute z-[0];
+  @apply aspect-square border-[1px] lg:border-[0.5px] border-black dark:border-white w-[60vh] opacity-25 lg:w-[70vw] absolute z-[0];
 }
